samples/by-property/invalid/opt-message-invalid.bspl
../../tests/opt/opt-message-invalid.bspl